--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,44 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Zedcore Coding Challenge</title>
-    <link rel="stylesheet" href="/vendor/twbs/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="/css/styles.css">
-</head>
-<body>
-<div class="container">
-    <h1>Challenge</h1>
-    <div class="row">
-        <div class="col-md-4">
-            <div class="card">
-                <div class="card-body">
-                    <form>
-                        <div class="form-group">
-                            <label for="challenge">Threshold (days)</label>
-							<div class="input-group">
-								<input class="form-control" name="challenge" type="number"/>
-								<div class="input-group-append">
-									<button type="submit" class="btn btn-primary">Submit form</button>
-								</div>
-							</div>
+    <head>
+        <meta charset="UTF-8">
+        <title>Zedcore Coding Challenge</title>
+        <link rel="stylesheet" href="/vendor/twbs/bootstrap/dist/css/bootstrap.css">
+        <link rel="stylesheet" href="/css/styles.css">
+    </head>
+    <body>
+        <div class="container">
+            <h1>Employer KPI report</h1>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="card">
+                        <div class="card-body">
+                            <form>
+                                <div class="form-group">
+                                    <label for="kpi">KPI target (days)</label>
+                                    <div class="input-group">
+                                        <input class="form-control" name="kpi" type="number"/>
+                                        <div class="input-group-append">
+                                            <button type="submit" class="btn btn-primary">
+                                                Run report
+                                            </button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
                         </div>
-                    </form>
+                        <div class="card-header border-top">
+                            Common KPI targets
+                        </div>
+                        <ul class="list-group list-group-flush">
+                            {% for item in report.CommonTargets %}
+                                <li class="list-group-item list-group-item-action">
+                                    <a href="/?target={{ item }}">{{ item }}</a>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    </div>
+
                 </div>
-                <div class="card-header known-header">
-                    Known answers
-                </div>
-                <ul class="list-group list-group-flush">
-                    {% for item in display.Known %}
-                        <li class="list-group-item list-group-item-action">
-                            <a href="/?challenge={{ item }}">{{ item }}</a>
-                        </li>
-                    {% endfor %}
-                </ul>
             </div>
+            {{ report.ShowResult|raw }}
         </div>
-    </div>
-	{{ display.ShowResult|raw }}
-</div>
-</body>
+    </body>
 </html>
