--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -30,13 +30,11 @@
                         <div class="card-header border-top">
                             Common KPI targets
                         </div>
-                        <ul class="list-group list-group-flush">
+                        <div class="list-group list-group-flush">
                             {% for item in report.CommonTargets %}
-                                <li class="list-group-item list-group-item-action">
-                                    <a href="/?target={{ item }}">{{ item }}</a>
-                                </li>
+                              <a class="list-group-item list-group-item-action" href="/?target={{ item }}">{{ item }}</a>
                             {% endfor %}
-                        </ul>
+                        </div>
                     </div>
 
                 </div>
