Fixex input name

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -15,9 +15,9 @@
                         <div class="card-body">
                             <form>
                                 <div class="form-group">
-                                    <label for="kpi">KPI target (days)</label>
+                                    <label for="target">KPI target (days)</label>
                                     <div class="input-group">
-                                        <input class="form-control" name="kpi" type="number"/>
+                                        <input class="form-control" name="target" type="number"/>
                                         <div class="input-group-append">
                                             <button type="submit" class="btn btn-primary">
                                                 Run report
